changed the genetic algorithm

--- a/TheGeneticAlgorithmMethod.ipynb
+++ b/TheGeneticAlgorithmMethod.ipynb
@@ -9,24 +9,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 0, Best Fitness: 15\n",
+      "Generation 1, Best Fitness: 16\n",
+      "Generation 2, Best Fitness: 16\n",
+      "Generation 3, Best Fitness: 16\n",
+      "Generation 4, Best Fitness: 16\n",
+      "Generation 5, Best Fitness: 16\n",
+      "Generation 6, Best Fitness: 16\n",
+      "Generation 7, Best Fitness: 16\n",
+      "Generation 8, Best Fitness: 16\n",
+      "Generation 9, Best Fitness: 16\n",
+      "Generation 10, Best Fitness: 16\n",
+      "Generation 11, Best Fitness: 16\n",
+      "Generation 12, Best Fitness: 16\n",
+      "Generation 13, Best Fitness: 16\n",
+      "Generation 14, Best Fitness: 16\n",
+      "Generation 15, Best Fitness: 16\n",
+      "Generation 16, Best Fitness: 16\n",
+      "Generation 17, Best Fitness: 16\n",
+      "Generation 18, Best Fitness: 16\n",
+      "Generation 19, Best Fitness: 16\n",
+      "Generation 20, Best Fitness: 16\n",
+      "Generation 21, Best Fitness: 16\n",
+      "Generation 22, Best Fitness: 16\n",
+      "Generation 23, Best Fitness: 16\n",
+      "Generation 24, Best Fitness: 16\n",
+      "Generation 25, Best Fitness: 16\n",
+      "Generation 26, Best Fitness: 16\n",
+      "Generation 27, Best Fitness: 16\n",
+      "Generation 28, Best Fitness: 16\n",
+      "Generation 29, Best Fitness: 16\n",
+      "Generation 30, Best Fitness: 16\n",
+      "Generation 31, Best Fitness: 16\n",
+      "Generation 32, Best Fitness: 16\n",
+      "Generation 33, Best Fitness: 16\n",
+      "Generation 34, Best Fitness: 16\n",
+      "Generation 35, Best Fitness: 16\n",
+      "Generation 36, Best Fitness: 16\n",
+      "Generation 37, Best Fitness: 16\n",
+      "Generation 38, Best Fitness: 16\n",
+      "Generation 39, Best Fitness: 16\n",
+      "Generation 40, Best Fitness: 16\n",
+      "Generation 41, Best Fitness: 16\n",
+      "Generation 42, Best Fitness: 16\n",
+      "Generation 43, Best Fitness: 16\n",
+      "Generation 44, Best Fitness: 16\n",
+      "Generation 45, Best Fitness: 16\n",
+      "Generation 46, Best Fitness: 16\n",
+      "Generation 47, Best Fitness: 16\n",
+      "Generation 48, Best Fitness: 16\n",
+      "Generation 49, Best Fitness: 16\n",
+      "Generation 50, Best Fitness: 16\n",
+      "Generation 51, Best Fitness: 16\n",
+      "Generation 52, Best Fitness: 16\n",
+      "Generation 53, Best Fitness: 16\n",
+      "Generation 54, Best Fitness: 16\n",
+      "Generation 55, Best Fitness: 16\n",
+      "Generation 56, Best Fitness: 16\n",
+      "Generation 57, Best Fitness: 16\n",
+      "Generation 58, Best Fitness: 16\n",
+      "Generation 59, Best Fitness: 16\n",
+      "Generation 60, Best Fitness: 16\n",
+      "Generation 61, Best Fitness: 16\n",
+      "Generation 62, Best Fitness: 16\n",
+      "Generation 63, Best Fitness: 16\n",
+      "Generation 64, Best Fitness: 16\n",
+      "Generation 65, Best Fitness: 16\n",
+      "Generation 66, Best Fitness: 16\n",
+      "Generation 67, Best Fitness: 16\n",
+      "Generation 68, Best Fitness: 16\n",
+      "Generation 69, Best Fitness: 16\n",
+      "Generation 70, Best Fitness: 16\n",
+      "Generation 71, Best Fitness: 16\n",
+      "Generation 72, Best Fitness: 16\n",
+      "Generation 73, Best Fitness: 16\n",
+      "Generation 74, Best Fitness: 16\n",
+      "Generation 75, Best Fitness: 16\n",
+      "Generation 76, Best Fitness: 16\n",
+      "Generation 77, Best Fitness: 16\n",
+      "Generation 78, Best Fitness: 16\n",
+      "Generation 79, Best Fitness: 16\n",
+      "Generation 80, Best Fitness: 16\n",
+      "Generation 81, Best Fitness: 16\n",
+      "Generation 82, Best Fitness: 16\n",
+      "Generation 83, Best Fitness: 16\n",
+      "Generation 84, Best Fitness: 16\n",
+      "Generation 85, Best Fitness: 16\n",
+      "Generation 86, Best Fitness: 16\n",
+      "Generation 87, Best Fitness: 16\n",
+      "Generation 88, Best Fitness: 16\n",
+      "Generation 89, Best Fitness: 16\n",
+      "Generation 90, Best Fitness: 16\n",
+      "Generation 91, Best Fitness: 16\n",
+      "Generation 92, Best Fitness: 16\n",
+      "Generation 93, Best Fitness: 16\n",
+      "Generation 94, Best Fitness: 16\n",
+      "Generation 95, Best Fitness: 16\n",
+      "Generation 96, Best Fitness: 16\n",
+      "Generation 97, Best Fitness: 16\n",
+      "Generation 98, Best Fitness: 16\n",
+      "Generation 99, Best Fitness: 16\n",
+      "Лучшее расписание:\n",
+      "Водитель 1: Начало смены в 15:00\n",
+      "Водитель 2: Начало смены в 11:00\n",
+      "Водитель 3: Начало смены в 11:00\n",
+      "Водитель 4: Начало смены в 6:00\n",
+      "Водитель 5: Начало смены в 16:00\n",
+      "Водитель 6: Начало смены в 11:00\n",
+      "Водитель 7: Начало смены в 12:00\n",
+      "Водитель 8: Начало смены в 15:00\n"
+     ]
+    }
+   ],
    "source": [
+    "import random\n",
+    "import copy\n",
     "import tkinter as tk\n",
     "from tkinter import ttk\n",
-    "import random\n",
+    "\n",
+    "\n",
+    "POPULATION_SIZE = 50\n",
+    "GENERATIONS = 100\n",
+    "MUTATION_RATE = 0.1\n",
+    "SHIFT_DURATION = 9\n",
     "\n",
     "\n",
     "PEAK_HOURS = [(7, 9), (17, 19)]\n",
-    "SHIFT_DURATION = 9\n",
-    "DRIVER_TYPES = [\"A\", \"B\"]\n",
-    "POPULATION_SIZE = 20\n",
-    "GENERATIONS = 100\n",
-    "MUTATION_RATE = 0.1\n",
-    "BREAK_DURATION_BIG = 1\n",
-    "BREAK_DURATION_SMALL = 0.25\n",
-    "BREAK_INTERVAL = 3\n",
     "\n",
     "\n",
     "drivers = [\n",
@@ -48,82 +163,93 @@
     "    return False\n",
     "\n",
     "\n",
-    "def random_schedule(driver):\n",
-    "    shift_start = driver[\"start\"]\n",
+    "def create_driver_schedule(driver):\n",
+    "    schedule = {}\n",
+    "    shift_start = driver['start']\n",
+    "    shift_end = (shift_start + SHIFT_DURATION) % 24\n",
     "    shift_hours = [(shift_start + i) % 24 for i in range(SHIFT_DURATION)]\n",
-    "    breaks = random.sample(shift_hours, k=random.randint(1, 2))\n",
-    "    return {\n",
-    "        \"hours\": shift_hours,\n",
-    "        \"breaks\": sorted(breaks),\n",
-    "    }\n",
+    "    breaks = [shift_hours[4]]\n",
+    "\n",
+    "    for hour in shift_hours:\n",
+    "        if hour == shift_start:\n",
+    "            schedule[hour] = 'Начало смены'\n",
+    "        elif hour in breaks:\n",
+    "            schedule[hour] = 'Перерыв'\n",
+    "        elif is_peak(hour):\n",
+    "            schedule[hour] = 'Поездка (час пик)'\n",
+    "        else:\n",
+    "            schedule[hour] = 'Поездка'\n",
+    "\n",
+    "    schedule[shift_end] = 'Окончание смены'\n",
+    "    return schedule\n",
+    "\n",
+    "\n",
+    "def generate_random_schedule():\n",
+    "    random_schedule = []\n",
+    "    for driver in drivers:\n",
+    "        shift_start = random.randint(6, 18)\n",
+    "        driver_copy = copy.deepcopy(driver)\n",
+    "        driver_copy['start'] = shift_start\n",
+    "        random_schedule.append(driver_copy)\n",
+    "    return random_schedule\n",
     "\n",
     "\n",
     "def fitness(schedule):\n",
-    "    score = 0\n",
-    "    for driver, data in schedule.items():\n",
-    "        breaks = data[\"breaks\"]\n",
-    "        for hour in breaks:\n",
-    "            if is_peak(hour):\n",
-    "                score -= 1\n",
-    "            else:\n",
-    "                score += 1\n",
-    "    return score\n",
+    "    penalty = 0\n",
+    "    peak_hours_coverage = 0\n",
     "\n",
+    "    for driver in schedule:\n",
+    "        shift = create_driver_schedule(driver)\n",
+    "        for hour, task in shift.items():\n",
+    "            if is_peak(hour) and task == 'Поездка (час пик)':\n",
+    "                peak_hours_coverage += 1\n",
+    "            if task == 'Перерыв' and is_peak(hour):\n",
+    "                penalty += 10\n",
     "\n",
-    "def initialize_population():\n",
-    "    return [\n",
-    "        {driver[\"name\"]: random_schedule(driver) for driver in drivers}\n",
-    "        for _ in range(POPULATION_SIZE)\n",
-    "    ]\n",
+    "    return peak_hours_coverage - penalty\n",
     "\n",
     "\n",
     "def crossover(parent1, parent2):\n",
-    "    child = {}\n",
-    "    for driver in drivers:\n",
-    "        name = driver[\"name\"]\n",
-    "        if random.random() < 0.5:\n",
-    "            child[name] = parent1[name]\n",
+    "    child = []\n",
+    "    for d1, d2 in zip(parent1, parent2):\n",
+    "        if random.random() > 0.5:\n",
+    "            child.append(copy.deepcopy(d1))\n",
     "        else:\n",
-    "            child[name] = parent2[name]\n",
+    "            child.append(copy.deepcopy(d2))\n",
     "    return child\n",
     "\n",
     "\n",
     "def mutate(schedule):\n",
-    "    for driver in drivers:\n",
+    "    for driver in schedule:\n",
     "        if random.random() < MUTATION_RATE:\n",
-    "            name = driver[\"name\"]\n",
-    "            schedule[name] = random_schedule(driver)\n",
+    "            driver['start'] = random.randint(6, 18)\n",
+    "    return schedule\n",
     "\n",
     "\n",
     "def genetic_algorithm():\n",
-    "    population = initialize_population()\n",
-    "    best_schedule = None\n",
-    "    best_fitness = float(\"-inf\")\n",
+    "    population = [generate_random_schedule() for _ in range(POPULATION_SIZE)]\n",
     "\n",
     "    for generation in range(GENERATIONS):\n",
-    "        population = sorted(population, key=fitness, reverse=True)\n",
+    "        population.sort(key=lambda s: -fitness(s))\n",
+    "        print(f\"Generation {generation}, Best Fitness: {fitness(population[0])}\")\n",
     "\n",
-    "        if fitness(population[0]) > best_fitness:\n",
-    "            best_schedule = population[0]\n",
-    "            best_fitness = fitness(population[0])\n",
+    "        new_population = population[:10]\n",
     "\n",
-    "        next_generation = population[:POPULATION_SIZE // 2]\n",
-    "\n",
-    "        while len(next_generation) < POPULATION_SIZE:\n",
-    "            parent1, parent2 = random.sample(population[:POPULATION_SIZE // 2], 2)\n",
+    "        while len(new_population) < POPULATION_SIZE:\n",
+    "            parent1, parent2 = random.sample(population[:20], 2)\n",
     "            child = crossover(parent1, parent2)\n",
-    "            mutate(child)\n",
-    "            next_generation.append(child)\n",
+    "            child = mutate(child)\n",
+    "            new_population.append(child)\n",
     "\n",
-    "        population = next_generation\n",
+    "        population = new_population\n",
     "\n",
+    "    best_schedule = population[0]\n",
     "    return best_schedule\n",
     "\n",
     "\n",
-    "\n",
-    "def create_gui(schedule):\n",
+    "def gui(schedule):\n",
     "    root = tk.Tk()\n",
-    "    root.title(\"Расписание водителей автобусов\")\n",
+    "    root.title(\"Расписание водителей автобусов (Генетический алгоритм)\")\n",
     "    root.geometry(\"1800x700\")\n",
     "\n",
     "    canvas = tk.Canvas(root)\n",
@@ -141,28 +267,26 @@
     "    canvas.pack(side=\"top\", fill=\"both\", expand=True)\n",
     "    scrollbar.pack(side=\"bottom\", fill=\"x\")\n",
     "\n",
-    "    for idx, (driver, data) in enumerate(schedule.items()):\n",
-    "        frame = ttk.LabelFrame(scrollable_frame, text=driver, padding=10)\n",
+    "    for idx, driver in enumerate(schedule):\n",
+    "        driver_schedule = create_driver_schedule(driver)\n",
+    "        frame = ttk.LabelFrame(scrollable_frame, text=driver['name'], padding=10)\n",
     "        frame.grid(row=0, column=idx, padx=10, pady=5, sticky=\"n\")\n",
     "\n",
-    "        shift_hours = data[\"hours\"]\n",
-    "        breaks = data[\"breaks\"]\n",
-    "\n",
-    "        for hour in shift_hours:\n",
-    "            if hour in breaks:\n",
-    "                label = ttk.Label(frame, text=f\"{hour:02d}:00 - Перерыв\", anchor=\"w\", padding=5)\n",
-    "            elif is_peak(hour):\n",
-    "                label = ttk.Label(frame, text=f\"{hour:02d}:00 - Поездка (час пик)\", anchor=\"w\", padding=5)\n",
-    "            else:\n",
-    "                label = ttk.Label(frame, text=f\"{hour:02d}:00 - Поездка\", anchor=\"w\", padding=5)\n",
+    "        hours_sorted = sorted(driver_schedule.items())\n",
+    "        for hour, activity in hours_sorted:\n",
+    "            label = ttk.Label(frame, text=f\"{hour:02d}:00 - {activity}\", anchor=\"w\", padding=5)\n",
     "            label.pack(fill=\"x\")\n",
     "\n",
     "    root.mainloop()\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    best_schedule = genetic_algorithm()\n",
-    "    create_gui(best_schedule)\n"
+    "    best_solution = genetic_algorithm()\n",
+    "    print(\"Лучшее расписание:\")\n",
+    "    for driver in best_solution:\n",
+    "        print(f\"{driver['name']}: Начало смены в {driver['start']}:00\")\n",
+    "\n",
+    "    gui(best_solution)\n"
    ]
   }
  ],
