--- a/TheStraightMethod.ipynb
+++ b/TheStraightMethod.ipynb
@@ -9,20 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import ttk\n",
-    "\n",
+    "import random\n",
     "\n",
     "PEAK_HOURS = [(7, 9), (17, 19)]\n",
     "SHIFT_DURATION = 9\n",
     "BREAK_DURATION_BIG = 1\n",
     "BREAK_DURATION_SMALL = 0.25\n",
     "BREAK_INTERVAL = 3\n",
-    "\n",
     "\n",
     "drivers = [\n",
     "    {\"name\": \"Водитель 1\", \"start\": 6, \"type\": \"A\"},\n",
@@ -34,6 +33,8 @@
     "    {\"name\": \"Водитель 7\", \"start\": 16, \"type\": \"A\"},\n",
     "    {\"name\": \"Водитель 8\", \"start\": 18, \"type\": \"B\"},\n",
     "]\n",
+    "\n",
+    "DAYS_OF_WEEK = [\"Понедельник\", \"Вторник\", \"Среда\", \"Четверг\", \"Пятница\", \"Суббота\", \"Воскресенье\"]\n",
     "\n",
     "\n",
     "def is_peak(hour):\n",
@@ -86,28 +87,34 @@
     "        elif hour in breaks:\n",
     "            schedule[hour] = 'Перерыв'\n",
     "        elif is_peak(hour):\n",
-    "            schedule[hour] = 'Поездка (час пик)'\n",
+    "            route_number = random.choice([1, 2])\n",
+    "            schedule[hour] = f'Поездка (час пик, Маршрут №{route_number})'\n",
     "        else:\n",
-    "            schedule[hour] = 'Поездка'\n",
+    "            route_number = random.choice([1, 2])\n",
+    "            schedule[hour] = f'Поездка (Маршрут №{route_number})'\n",
     "\n",
     "    schedule[shift_end] = 'Окончание смены'\n",
     "    return schedule\n",
     "\n",
     "\n",
-    "def generate_schedule():\n",
-    "    driver_schedules = {}\n",
-    "    for driver in drivers:\n",
-    "        driver_schedules[driver['name']] = create_driver_schedule(driver)\n",
-    "    return driver_schedules\n",
+    "def generate_weekly_schedule():\n",
+    "    weekly_schedule = {}\n",
+    "    for day in DAYS_OF_WEEK:\n",
+    "        daily_schedule = []\n",
+    "        for driver in drivers:\n",
+    "            daily_schedule.append(driver)\n",
+    "        weekly_schedule[day] = daily_schedule\n",
+    "    return weekly_schedule\n",
     "\n",
     "\n",
-    "def create_gui(schedule):\n",
+    "def create_weekly_gui(weekly_schedule):\n",
     "    root = tk.Tk()\n",
-    "    root.title(\"Расписание водителей автобусов\")\n",
+    "    root.title(\"Расписание водителей автобусов (Неделя)\")\n",
     "    root.geometry(\"1800x700\")\n",
     "\n",
     "    canvas = tk.Canvas(root)\n",
-    "    scrollbar = ttk.Scrollbar(root, orient=\"horizontal\", command=canvas.xview)\n",
+    "    v_scrollbar = ttk.Scrollbar(root, orient=\"vertical\", command=canvas.yview)\n",
+    "    h_scrollbar = ttk.Scrollbar(root, orient=\"horizontal\", command=canvas.xview)\n",
     "    scrollable_frame = ttk.Frame(canvas)\n",
     "\n",
     "    scrollable_frame.bind(\n",
@@ -116,26 +123,38 @@
     "    )\n",
     "\n",
     "    canvas.create_window((0, 0), window=scrollable_frame, anchor=\"nw\")\n",
-    "    canvas.configure(xscrollcommand=scrollbar.set)\n",
+    "    canvas.configure(yscrollcommand=v_scrollbar.set, xscrollcommand=h_scrollbar.set)\n",
     "\n",
-    "    canvas.pack(side=\"top\", fill=\"both\", expand=True)\n",
-    "    scrollbar.pack(side=\"bottom\", fill=\"x\")\n",
+    "    canvas.pack(side=\"left\", fill=\"both\", expand=True)\n",
+    "    v_scrollbar.pack(side=\"right\", fill=\"y\")\n",
+    "    h_scrollbar.pack(side=\"bottom\", fill=\"x\")\n",
     "\n",
-    "    for idx, (driver, hours) in enumerate(schedule.items()):\n",
-    "        frame = ttk.LabelFrame(scrollable_frame, text=driver, padding=10)\n",
-    "        frame.grid(row=0, column=idx, padx=10, pady=5, sticky=\"n\")\n",
+    "    # Функция для сортировки часов с учётом перехода через полночь\n",
+    "    def sort_hours(hours):\n",
+    "        return sorted(hours, key=lambda h: h if h >= 6 else h + 24)\n",
     "\n",
-    "        hours_sorted = sorted(hours.items())\n",
-    "        for hour, activity in hours_sorted:\n",
-    "            label = ttk.Label(frame, text=f\"{hour:02d}:00 - {activity}\", anchor=\"w\", padding=5)\n",
-    "            label.pack(fill=\"x\")\n",
+    "    for day_idx, day in enumerate(DAYS_OF_WEEK):\n",
+    "        day_label = ttk.Label(scrollable_frame, text=f\"{day}\", font=(\"Arial\", 14, \"bold\"))\n",
+    "        day_label.grid(row=day_idx * 2, column=0, padx=10, pady=10, sticky=\"w\")\n",
+    "\n",
+    "        for driver_idx, driver in enumerate(weekly_schedule[day]):\n",
+    "            driver_schedule = create_driver_schedule(driver)\n",
+    "            driver_type = driver['type']\n",
+    "            frame = ttk.LabelFrame(scrollable_frame, text=f\"{driver['name']} (Тип {driver_type})\", padding=10)\n",
+    "            frame.grid(row=day_idx * 2 + 1, column=driver_idx, padx=10, pady=5, sticky=\"n\")\n",
+    "\n",
+    "            hours_sorted = sort_hours(driver_schedule.keys())\n",
+    "            for hour in hours_sorted:\n",
+    "                activity = driver_schedule[hour % 24]\n",
+    "                label = ttk.Label(frame, text=f\"{hour % 24:02d}:00 - {activity}\", anchor=\"w\", padding=5)\n",
+    "                label.pack(fill=\"x\")\n",
     "\n",
     "    root.mainloop()\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    schedule = generate_schedule()\n",
-    "    create_gui(schedule)\n"
+    "    weekly_schedule = generate_weekly_schedule()\n",
+    "    create_weekly_gui(weekly_schedule)\n"
    ]
   }
  ],
